test_suite/tests/errors/unknown_transition_target_max_entry.stderr
error: Unknown state transition `nowhere`. Declare the state or fix the name
 --> tests/errors/unknown_transition_target_max_entry.rs:5:29
  |
5 |         #[max_entry = 1 => @nowhere]
  |                             ^^^^^^^
